# vibe

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  license.mit  todo.txt
docs/: virtio.txt
linux/: build_dtb.sh  do_build.sh  vibe.dtb  vibe.dts
src/: common.h  mach.c  mach.h  main.c  rv.c  rv.h  vibe.h
src/hw/: clint.c  clint.h  plic.c  plic.h  rtc.c  rtc.h  uart.c  uart.h  virtio.c  virtio.h  virtio_blk.c  virtio_blk.h  virtio_net.c  virtio_net.h  virtio_rng.c  virtio_rng.h
